--- a/PLMS/.gitignore
+++ b/PLMS/.gitignore
@@ -35,3 +35,6 @@ out/
 
 ### VS Code ###
 .vscode/
+
+### application.properties is local (password is different for each) ###
+application.properties
