--- a/PLMS/build.gradle
+++ b/PLMS/build.gradle
@@ -21,4 +21,8 @@ dependencies {
 
 tasks.named('test') {
 	useJUnitPlatform()
+	testLogging {
+		exceptionFormat "full"
+		events "failed", "skipped", "passed"
+	}
 }
