--- a/PLMS/build.gradle
+++ b/PLMS/build.gradle
@@ -2,6 +2,10 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.0.2'
 	id 'io.spring.dependency-management' version '1.1.0'
+
+	id "org.jetbrains.kotlin.plugin.spring" version "1.8.10"
+
+
 }
 
 group = 'ca.mcgill.ecse321'
