revert to a commit where application.properties existed and commented that line out of the gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -37,4 +37,4 @@ out/
 .vscode/
 
 ### application.properties is local (password is different for each) ###
-application.properties
+### application.properties
