--- a/PLMS/build.gradle
+++ b/PLMS/build.gradle
@@ -3,6 +3,7 @@ plugins {
 	id 'org.springframework.boot' version '3.0.2'
 	id 'io.spring.dependency-management' version '1.1.0'
 	id "org.jetbrains.kotlin.plugin.spring" version "1.8.10"
+	id 'jacoco'
 }
 
 group = 'ca.mcgill.ecse321'
@@ -19,6 +20,13 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	runtimeOnly 'org.postgresql:postgresql'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+	// API docs, courtesy of TA louis
+	// See springdoc.org/v2/#getting-started and springdoc.org/v2/#javadoc-support
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.3'
+	implementation 'org.springdoc:springdoc-openapi-starter-common:2.0.3'
+	annotationProcessor 'com.github.therapi:therapi-runtime-javadoc-scribe:0.13.0'
+	implementation 'com.github.therapi:therapi-runtime-javadoc:0.13.0'
 }
 
 tasks.named('test') {
@@ -27,5 +35,7 @@ tasks.named('test') {
 		exceptionFormat "full"
 		events "failed", "skipped", "passed"
 	}
-}
 
+	// After running the tests, generate the coverage report 
+	finalizedBy jacocoTestReport
+}
