Added extra capacity check

--- a/PLMS/src/main/resources/application.properties
+++ b/PLMS/src/main/resources/application.properties
@@ -5,4 +5,4 @@ spring.jpa.hibernate.ddl-auto=update
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/plms
 spring.datasource.username=postgres
-spring.datasource.password=benrhouma
+spring.datasource.password=R00tb33r$
